# dbkit-sql

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PERFORMANCE_REVIEW.md  PRODUCTION_READINESS_REVIEW.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-matrix.yml  docs.yml  release.yml  security.yml
benchmarks/: __init__.py  __main__.py  _common.py  _results.py  _stats.py  bench_batch.py  bench_batch_collector.py  bench_concurrency_scaling.py  bench_crud.py  bench_latency.py  bench_observability_overhead.py  bench_overhead.py  bench_pgbouncer_compatible.py  bench_pool_exhaustion.py  bench_shard_cardinality.py  bench_streaming_scale.py  bench_throughput.py  bench_unnest.py  check_regression.py  soak.py
docs/: cli.md  dynamic-registration.md  index.md  observability.md  requirements.md  roadmap.md  security.md  testing.md  troubleshooting.md  versioning.md
docs/api/: config.md  database.md  errors.md  integrations.md  observability.md  query.md
examples/: advisory_locks.py  batch_collector.py  bulk_insert_upsert.py  copy_ingest.py  error_handling.py  health_and_pool.py  inbox_idempotent_consumer.py  opentelemetry_observability.py  pgbouncer_mode.py  pipeline_mode.py  quickstart_async.py  quickstart_sync.py  retries_and_circuit_breaker.py  run_all.py  streaming.py  streaming_checkpoint_resume.py  sync_feature_parity.py  transactional_outbox.py  transactions_savepoints.py
src/dbkit/: __init__.py  _pool.py  errors.py
src/dbkit/_async/: __init__.py  _compat.py  connection.py  database.py  engine.py  executor.py  health.py  resilience.py  streaming.py  transaction.py
src/dbkit/_core/: __init__.py  bulk.py  circuit.py  config.py  idempotency_lint.py  keys.py  policies.py  query.py  result.py  routing.py
src/dbkit/_core/errors/: __init__.py  base.py  classifier.py  redaction.py  sqlstate.py
src/dbkit/_sync/: __init__.py  _compat.py  connection.py  database.py  engine.py  executor.py  health.py  resilience.py  streaming.py  transaction.py
src/dbkit/cli/: __init__.py  main.py
src/dbkit/integrations/: __init__.py  batch.py  fastapi.py  inbox.py  outbox.py
src/dbkit/observability/: __init__.py  logging.py  metrics.py  otel_metrics.py  prometheus.py  tracing.py
src/dbkit/postgres/: __init__.py  copy.py  pipeline.py  unnest.py
src/dbkit/testing/: __init__.py
tests/: conftest.py
tests/integration/: _mp_budget_worker.py  test_async_integration.py  test_cli_integration.py  test_multiprocess_connection_budget.py  test_resilience_scenarios.py  test_sharding_and_replicas.py  test_sync_integration.py  test_throughput_paths.py
tests/property/: test_invariants.py
tests/security/: test_redaction.py  test_sql_injection.py
tests/unit/: test_benchmark_stats.py  test_bulk_batch.py  test_cancellation_shielding.py  test_circuit.py  test_cli.py  test_config.py  test_default_metrics_sink.py  test_dual_api.py  test_dynamic_registration.py  test_engine_registry.py  test_errors.py  test_fastapi_integration.py  test_idempotency_lint.py  test_integrations_outbox.py  test_logging.py  test_otel_metrics.py  test_policies.py  test_prometheus_metrics.py  test_query.py  test_query_settings.py  test_resilience.py  test_result.py  test_sharding_replica.py  test_testing_fakes.py  test_tracing.py  test_unasync_translation.py  test_unnest.py
tools/: run_unasync.py
